@@ -66,6 +66,7 @@ Import-Package: com.openexchange.api2,
  gnu.trove,
  gnu.trove.list,
  gnu.trove.list.array,
+ gnu.trove.list.linked,
  gnu.trove.map,
  gnu.trove.map.hash,
  gnu.trove.procedure,
